--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 </head>
 
 <body>
+
     <div class="container">
+
         <h2>📉 Image Size Reducer</h2>
+        <!-- image input -->
 
         <input type="file" id="imageInput" accept="image/*" />
         <input type="number" id="targetSize" placeholder="Enter target size (KB)" />
